--- a/gradle/java/core-mrjar.gradle
+++ b/gradle/java/core-mrjar.gradle
@@ -19,7 +19,7 @@
 
 configure(project(":lucene:core")) {
   plugins.withType(JavaPlugin) {
-    for (jdkVersion : mrjarJavaVersions) {
+    mrjarJavaVersions.each { jdkVersion ->
       sourceSets.create("main${jdkVersion}") {
         java {
           srcDirs = ["src/java${jdkVersion}"]
@@ -47,7 +47,7 @@ configure(project(":lucene:core")) {
     }
     
     tasks.named('jar').configure {
-      for (jdkVersion : mrjarJavaVersions) {
+      mrjarJavaVersions.each { jdkVersion ->
         into("META-INF/versions/${jdkVersion}") {
           from sourceSets["main${jdkVersion}"].output
         }
