--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,10 @@ pluginManagement {
     }
 }
 
+plugins {
+    id("org.gradle.toolchains.foojay-resolver-convention") version "0.7.0"
+}
+
 rootProject.name = "lucene-root"
 
 includeBuild("dev-tools/missing-doclet")
