--- a/gradle/help.gradle
+++ b/gradle/help.gradle
@@ -27,6 +27,7 @@ configure(rootProject) {
       ["ForbiddenApis", "help/forbiddenApis.txt", "How to add/apply rules for forbidden APIs."],
       ["LocalSettings", "help/localSettings.txt", "Local settings, overrides and build performance tweaks."],
       ["Regeneration", "help/regeneration.txt", "How to refresh generated and derived resources."],
+      ["Jmh", "lucene/benchmark-jmh/README.txt", "JMH micro-benchmarks."],
       ["Git", "help/git.txt", "Git assistance and guides."],
       ["IDEs", "help/IDEs.txt", "IDE support."],
       ["Publishing", "help/publishing.txt", "Maven and other artifact publishing, signing, etc."],
